src/objects/Financial_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Financial Summaries</relationshipLabel>
        <relationshipName>Financial_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yearly_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yearly Summary</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Summary</label>
    <nameField>
        <displayFormat>FINSUM-{0000000}</displayFormat>
        <label>Financial Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>